Reorganized the spellcasting page, Added spell tooltips. BugFixes Fixed a spellcasting bug that always had the casting level at 1. Bugfix on some green text in attack chats that should not have been highlighted green, In multiattacks Sneak Attack now only applies once.

--- a/less/actor.less
+++ b/less/actor.less
@@ -286,6 +286,19 @@
         min-height: 110px;
     }
 
+    .right-border
+    {
+        border-right: 1px groove lightgray;
+    }
+
+    .collapsed-category
+    {
+        padding: 0 18px;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.2s ease-out;
+    }
+
     input.calcBox
     {
         background: white;
