--- a/fantasycraft.css
+++ b/fantasycraft.css
@@ -214,6 +214,15 @@
   border-left: 1px groove lightgray;
   min-height: 110px;
 }
+.fantasycraft.sheet.actor .right-border {
+  border-right: 1px groove lightgray;
+}
+.fantasycraft.sheet.actor .collapsed-category {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
 .fantasycraft.sheet.actor input.calcBox {
   background: white;
 }
@@ -358,6 +367,23 @@
   flex: auto;
   text-align: left;
 }
+.fantasycraft .collapsible {
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+.fantasycraft .content {
+  padding: 0 18px;
+  background-color: white;
+  max-width: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
 .fantasycraft span.categorylabel {
   font-weight: bold;
 }
@@ -440,6 +466,33 @@
   height: 100%;
   overflow-y: auto;
   align-content: flex-start;
+}
+.sheet details {
+  max-width: 15px;
+  background-color: maroon;
+}
+.sheet details summary {
+  padding: 3px;
+  font-size: 1.5em;
+  padding-top: 40px;
+  color: white;
+}
+.sheet details ::marker {
+  box-shadow: grey;
+}
+.sheet details[open] {
+  max-width: 100%;
+  background-color: unset;
+}
+.sheet details[open] summary {
+  position: relative;
+  list-style-type: "◄";
+  font-size: 1.5em;
+  text-align: right;
+  left: 7px;
+  top: 2.5%;
+  max-height: 0px;
+  padding: 0px;
 }
 .sheet input[type="text"],
 .sheet input[type="number"] {
