--- a/less/general.less
+++ b/less/general.less
@@ -38,6 +38,30 @@
         }
     }
 
+    
+  .collapsible {
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+
+  .active, .collapsible:hover {
+    //background-color: #555;
+  }
+
+  .content {
+    padding: 0 18px;
+    background-color: white;
+    max-width: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
+
     span.categorylabel 
     {
       font-weight: bold;
@@ -116,6 +140,43 @@
     /*  Element Styles                           */
     /* ----------------------------------------- */
   
+    
+    details
+    {
+      max-width: 15px;
+      background-color: maroon;
+
+      summary
+      {
+        padding: 3px;
+        font-size: 1.5em;
+        padding-top: 40px;
+        color: white;
+      }
+      ::marker
+      {
+        box-shadow: grey;
+      }
+    }
+
+    details[open]
+    {
+      max-width: 100%;
+      background-color: unset;
+
+      summary
+      {
+        position: relative;
+        list-style-type: "◄";
+        font-size: 1.5em;
+        text-align: right;
+        left: 7px;
+        top: 2.5%;
+        max-height: 0px;
+        padding: 0px;
+      }
+    }
+
     // Input Fields
     input[type="text"],
     input[type="number"] {
