Cleaned up some of the character sheet, added different sizes of AD to the roll section, added a pool for non-starting AD added some missing specialties from the Adventure Companion, bug fix for 'feat expert' options not properly applying to tricks.

--- a/fantasycraft.css
+++ b/fantasycraft.css
@@ -169,6 +169,12 @@
   margin: 0px;
   vertical-align: middle;
 }
+.fantasycraft.sheet.actor .featCat {
+  text-align: right;
+  font-size: 10px;
+  font-style: italic;
+  align-self: center;
+}
 .fantasycraft.sheet.actor .traits .form-group,
 .fantasycraft.sheet.actor .traits .form-group-stacked {
   margin: 0 0 3px 0;
