--- a/less/actor.less
+++ b/less/actor.less
@@ -221,6 +221,14 @@
         vertical-align: middle;
     }
 
+    .featCat
+    {
+        text-align: right; 
+        font-size:10px; 
+        font-style: italic; 
+        align-self: center;
+    }
+
     .traits 
     {
         .form-group, .form-group-stacked 
