--- a/templates/partials/item-part.hbs
+++ b/templates/partials/item-part.hbs
@@ -24,6 +24,6 @@
             </a>
         </div>
         {{/if}}
-        {{#if system.featType}}<span style="text-align: right;"> ({{localize system.featType}})  </span>{{/if}}
+        {{#if system.featType}}<span class="flex2 featCat"> {{localize system.featType}}  </span>{{/if}}
     </div>
 </div>
